fix: alters styling of modal/background to avoid backdrop color cutting off, stops cards from stretching too wide

--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -138,7 +138,6 @@
     }
   }
   .portfolios {
-    grid-template-columns: 1fr !important;
     padding-bottom: 6rem;
     margin-top: 1rem;
   }
@@ -181,12 +180,15 @@
     padding-top: 6rem;
     margin-bottom: 2rem;
     h2 {
-      font-size: 2.5rem;
+      font-size: 3.5rem;
       .bg-text {
-        font-size: 3rem;
-        line-height: 5rem;
+        font-size: 4rem;
+        line-height: 7rem;
       }
     }
+  }
+
+  .portfolios {
   }
 
   .contact-content-con {
