--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -329,6 +329,9 @@ button {
 // Portfolio
 
 .portfolio {
+  // allows backdrop to properly cover section
+  padding: 0 0 !important;
+
   .port-text {
     display: flex;
     justify-content: center;
@@ -339,21 +342,24 @@ button {
   }
 
   .portfolios {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 2rem;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    row-gap: 2rem;
+    column-gap: 2rem;
+    align-content: center;
+    justify-content: center;
     margin-top: 3rem;
-    padding-bottom: 10rem;
+    padding-bottom: 20rem;
 
     .portfolio-card {
       cursor: pointer;
-      pointer-events: all;
-      margin: 0 2rem;
-      object-fit: contain;
-      border-radius: 15px;
+      width: auto;
+      height: auto;
       img {
         width: 100%;
-        height: 450px;
+        height: 100%;
+        object-fit: cover;
         border-radius: 15px;
       }
     }
@@ -365,16 +371,17 @@ button {
       height: 100%;
       width: 100%;
       z-index: 2;
-      background: #000000e1;
       display: flex;
       align-items: center;
       justify-content: center;
       .modal {
+        box-shadow: 8px 8px 8px rgba(0, 0, 0, 0.5);
         position: relative;
         padding: 1rem 2rem;
-        width: clamp(50%, 500px, 100%);
-        height: min(50%, 370px);
-        background: var(--color-accent);
+        width: auto;
+        max-width: 700px;
+        height: auto;
+        background: var(--c olor-accent);
         background: linear-gradient(
           var(--color-accent) 40%,
           var(--color-primary) 100%
@@ -392,6 +399,7 @@ button {
 
         h3 {
           text-transform: uppercase;
+          text-shadow: #000;
           font-size: 2rem;
           margin: 0.5rem 0;
           text-align: center;
